--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,13 @@
   <%= @user.email %>
 </p>
 
+<p>
+  <strong>Posts:</strong><br>
+  <%  @microposts.each do |m|%>
+  <%= m.content%> <br>
+  <p>___________________</p>
+  <%end%>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
